--- a/pom.xml
+++ b/pom.xml
@@ -51,8 +51,8 @@
   		<disruptor.version>3.4.1</disruptor.version>
   		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
-		<docker.host>http://59.110.164.254:5555</docker.host>
-		<docker.image.prefix>owenwangwen</docker.image.prefix>
+		<docker.host>unix:///var/run/docker.sock</docker.host>
+		<docker.image.prefix>ocpsample</docker.image.prefix>
 		<spring-boot.version>2.1.12.RELEASE</spring-boot.version>
 		<spring-platform.version>Cairo-SR3</spring-platform.version>
 		<spring.social.version>1.1.6.RELEASE</spring.social.version>
